syntax = "proto3";
package AccommodationService.Presentation.Grpc.protos.Rooms;
option csharp_namespace = "Accommodation.Service.Presentation.Grpc";
import "money.proto";

service RoomService {
  rpc GetRoomsByHotel(GetRoomsByHotelRequest) returns (GetRoomsByHotelResponse);
}

message GetRoomsByHotelRequest {
  int64 hotel_id = 1;
  optional RoomType room_type = 2;
  int32 page_size = 3;
  int64 cursor = 4;
}

message GetRoomsByHotelResponse {
  repeated RoomDto rooms_list = 1;
}

message RoomDto {
  int64 room_id = 1;
  int64 hotel_id = 2;
  int32 room_number = 3;
  RoomType room_type = 4;
  google.type.Money price = 5;
}

enum RoomType {
  ROOM_TYPE_UNSPECIFIED = 0;
  ROOM_TYPE_STANDARD = 1;
  ROOM_TYPE_TWIN = 2;
  ROOM_TYPE_STUDIO = 3;
  ROOM_TYPE_JUNIOR_SUITE = 4;
  ROOM_TYPE_DELUXE = 5;
}